--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,6 +12,7 @@
             <RowDefinition Height="30"></RowDefinition>
             <RowDefinition Height="30"></RowDefinition>
             <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="30"></RowDefinition>
         </Grid.RowDefinitions>
@@ -30,11 +31,14 @@
         <TextBox Width="300" Height="25" x:Name="tb_startcomment" Grid.Row="3" HorizontalAlignment="Left" Margin="50, 0, 0, 0" VerticalContentAlignment="Center"></TextBox>
         <Label Height="25" Content="注释尾: " Grid.Row="3" Margin="380, 0, 0, 0" HorizontalAlignment="Left" Padding="0, 5"/>
         <TextBox Width="300" Height="25" x:Name="tb_endcomment" Grid.Row="3" HorizontalAlignment="Left" Margin="430, 0, 0, 0" VerticalContentAlignment="Center"></TextBox>
-        <TextBox x:Name="tb_errortext" VerticalScrollBarVisibility="Auto" Grid.Row="4" Margin="0, 5" IsReadOnly="True"/>
+        <CheckBox Grid.Row="4" x:Name="cb_ignorespace" Content="忽略多余空格" VerticalContentAlignment="Center" HorizontalAlignment="Left"></CheckBox>
+        <CheckBox Grid.Row="4" x:Name="cb_tolower" Content="无视大小写" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="100, 0, 0, 0"></CheckBox>
+        <CheckBox Grid.Row="4" x:Name="cb_regexp" Content="正则表达式" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="200, 0, 0, 0"></CheckBox>
+        <TextBox x:Name="tb_errortext" VerticalScrollBarVisibility="Auto" Grid.Row="5" Margin="0, 5" IsReadOnly="True"/>
 
-        <Label Grid.Row="5" x:Name="l_info" HorizontalAlignment="Right" Margin="0, 0, 50, 0"></Label>
-        <Button Width="50" Height="25" Content="开始" Click="Button_Ok_ClickAsync" Grid.Row="5" HorizontalAlignment="Right"></Button>
+        <Label Grid.Row="6" x:Name="l_info" HorizontalAlignment="Right" Margin="0, 0, 50, 0"></Label>
+        <Button Width="50" Height="25" Content="开始" Click="Button_Ok_ClickAsync" Grid.Row="6" HorizontalAlignment="Right"></Button>
 
-        <Button Width="50" Height="25" Content="停止" Click="Button_Stop_Click" Grid.Row="0" HorizontalAlignment="Right"></Button>
+        <Button x:Name="btn_stop" Width="50" Height="25" Content="停止" Click="Button_Stop_Click" Grid.Row="0" HorizontalAlignment="Right" IsEnabled="False"></Button>
     </Grid>
 </Window>
